@startuml

title __NTU_6_6's Class Diagram__\n

  namespace com.company {
    abstract class com.company.Animal {
    }
  }
  

  namespace com.company {
    class com.company.BigDog {
    }
  }
  

  namespace com.company {
    class com.company.Cat {
    }
  }
  

  namespace com.company {
    class com.company.Dog {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  com.company.BigDog -up-|> com.company.Dog
  com.company.Cat -up-|> com.company.Animal
  com.company.Dog -up-|> com.company.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
